add product : Toros De Arenas

--- a/product-details.html
+++ b/product-details.html
@@ -276,46 +276,47 @@
                 >
                   <div class="product_info_content">
                     <p>
-                      Faites votre choix parmis nos meilleurs collection et
-                      tentez d'obtenir un cadeau 🎁🎁 ! Notre collection
-                      représente l'élégance et chaque bijoux fait preuve d'une
-                      sérieuse durabilité, grâce à ✅ des matériaux de première
-                      qualité et à une conception sophistiqué 🎀. Chaque pièce
-                      est une déclaration de style unique, conçue pour durer au
-                      fil du temps ! Nous nous engageons à vous offrir une
-                      satisfaction totale à chaque achat, car votre confiance
-                      est notre priorité. En signe de reconnaissance, nous
-                      aimons glisser dans vos commandes des cadeaux spéciaux 😉
-                      témoignage de notre gratitude pour votre fidélité 💝.
-                      Découvrez dès maintenant nos collections et laissez-vous
-                      séduire par l'excellence et l'attention aux détails qui
-                      font de chaque bijou une œuvre d'art a en profiter pour
-                      toujours.
+                      Faites votre choix parmi nos meilleures créations et
+                      tentez d'obtenir un cadeau 🎁🎁 ! Chaque fragrance de
+                      notre collection incarne l'excellence, mêlant des
+                      ingrédients de première qualité pour des senteurs durables
+                      et envoûtantes. Chaque parfum est soigneusement élaboré
+                      pour offrir une expérience olfactive unique qui vous
+                      accompagnera tout au long de la journée 🌸.
                     </p>
                     <p>
-                      Découvrez l'excellence chez
+                      Nous nous engageons à vous offrir une satisfaction totale
+                      à chaque achat, car votre bien-être et votre confiance
+                      sont nos priorités absolues. En signe de reconnaissance,
+                      nous glissons souvent des surprises spéciales dans vos
+                      commandes 😉, témoignant de notre gratitude pour votre
+                      fidélité 💝. Découvrez dès maintenant nos collections et
+                      laissez-vous séduire par l'élégance et l'attention aux
+                      détails qui font de chaque parfum une véritable œuvre
+                      d'art olfactive.
+                    </p>
+                    <p>
+                      Plongez dans le monde fascinant des senteurs avec
                       <span
                         class="brand-lil-bling-title"
                         style="font-weight: 600"
                       >
-                        ✨ LiL Bling
+                        ✨LiL Scents
                         <i class="lil-bling-copyright-logo">©</i> ✨
                       </span>
-                      ! Nous vous proposons une sélection de bijoux d'une
-                      qualité exceptionnelle 💎, alliant durabilité et élégance
-                      incomparables. Chaque pièce est soigneusement conçue et
-                      selectionné pour offrir le meilleur rapport qualité/prix à
-                      nos chérs clients exigeants 💖.
-                    </p>
-                    <p>
-                      Faites plaisir à vos proches 🫂 avec des cadeaux 🎁 qui
-                      marquent les esprits. Nos bijoux sont trés à la mode et
-                      élégants, et aussi fabriqués avec des matériaux de haute
-                      qualité (voir la section materiel dans chaque page de
-                      produit) assurant une durabilité à toute épreuve. Profitez
-                      d'une communication transparente 💬 à lors de votre
-                      commande et personnalisez votre emballage pour une touche
-                      personnelle unique 💍 comme vous voulez.
+                      ! Nous vous proposons une sélection de parfums d'une
+                      qualité exceptionnelle 🌿, alliant durabilité et élégance
+                      incomparable. Chaque fragrance est soigneusement conçue et
+                      sélectionnée pour offrir le meilleur rapport qualité/prix
+                      à nos clients les plus exigeants 💖. Faites plaisir à vos
+                      proches 🫂 avec des parfums 🎁 qui laissent une empreinte
+                      mémorable. Nos fragrances sont modernes, élégantes, et
+                      fabriquées avec des ingrédients de haute qualité
+                      (découvrez les détails sur chaque page produit),
+                      garantissant une tenue impeccable. Profitez d'une
+                      communication transparente 💬 lors de votre commande et
+                      personnalisez votre emballage pour une touche unique ✨
+                      comme vous le souhaitez.
                     </p>
                   </div>
                 </div>
