update contact us page infos

--- a/contact-us.html
+++ b/contact-us.html
@@ -182,19 +182,19 @@
             <div class="about_thumb">
               <img
                 style="width: 100%; border-radius: 25px"
-                src="assets/img/banner2.jpg"
+                src="assets/img/logo/logo-islam-beauty-store.jpg"
                 alt=""
               />
             </div>
             <div class="about_content">
               <h1>
-                ✨ LiL' Bling
+                ✨ Islam Beauty Store
                 <i class="lil-bling-copyright-logo">©</i>
                 ✨
               </h1>
               <p>
                 Nous sommes là pour vous ! Que vous ayez des questions sur nos
-                produits, besoin d'assistance pour passer une commande ou des
+                parfums, besoin d'assistance pour passer une commande ou des
                 préoccupations concernant une livraison, notre équipe dévouée
                 est là pour vous aider. N'hésitez pas à nous contacter par
                 WhatsApp pour une réponse rapide et personnalisée. Votre
@@ -204,10 +204,8 @@
                 nouvelles !
               </p>
               <span>
-                “Les bijoux sont les symboles les plus intimes du luxe, de la
-                mode et de la passion.”
-                <br />
-                - Coco Chanel -
+                “Le parfum est un voyage invisible qui touche le cœur avant même
+                les sens.”
               </span>
             </div>
           </div>
@@ -225,16 +223,16 @@
               <h3>Suivez-nous sur les réseaux sociaux 😎 !!</h3>
               <ul>
                 <li>
-                  <i class="fa fa-fax"></i>
-                  Adresse
+                  <!-- tikTok logo -->
+                  Islam Beauty Store
                 </li>
                 <li>
                   <i class="fa fa-phone"></i>
-                  <a href="#">demo@example.com</a>
+                  <a href="#">0700648401</a>
                 </li>
                 <li>
-                  <i class="fa fa-envelope-o"></i>
-                  0123456789
+                  <i class="fa fa-instagram" aria-hidden="true"></i>
+                  <a href="">islamBeautyStor</a>
                 </li>
               </ul>
             </div>
