refactor and code enhancement !
+ remove smallPicUrl attributes
+ delete all small-image version of each product
+ get off the shiftOutAndDelete mecanism
+ resolve all todos
+ enhance owlCarousel behavior
+ center text in product details (generic) description
+ add mock title & description for a specific product (will be for all the other products)

--- a/product-details.html
+++ b/product-details.html
@@ -274,7 +274,7 @@
                   id="info"
                   role="tabpanel"
                 >
-                  <div class="product_info_content">
+                  <div class="product_info_content text-center">
                     <p>
                       Faites votre choix parmi nos meilleures créations et
                       tentez d'obtenir un cadeau 🎁🎁 ! Chaque fragrance de
@@ -284,6 +284,7 @@
                       pour offrir une expérience olfactive unique qui vous
                       accompagnera tout au long de la journée 🌸.
                     </p>
+                    <br>
                     <p>
                       Nous nous engageons à vous offrir une satisfaction totale
                       à chaque achat, car votre bien-être et votre confiance
@@ -295,6 +296,7 @@
                       détails qui font de chaque parfum une véritable œuvre
                       d'art olfactive.
                     </p>
+                    <br>
                     <p>
                       Plongez dans le monde fascinant des senteurs avec
                       <span
