update: all products description, title display

--- a/product-details.html
+++ b/product-details.html
@@ -199,29 +199,14 @@
           </div>
           <div class="col-lg-8 col-md-8">
             <div class="product_d_right">
-              <u>
-                <h1 id="product-name" class="text-skeleton">Lorem, ipsum.</h1>
-              </u>
+              <h1 id="product-name" class="text-skeleton"></h1>
               <div class="product_price">
                 <span class="current_price text-skeleton" id="product-price">
-                  123 Dhs
                 </span>
               </div>
               <div class="product_desc">
-                <p id="product-description" class="text-skeleton">
-                  AApeget velit. Donec ac tempus ante. Fusce ultricies massa
-                  massa. Fusce aliquam, purus eget sagittis vulputate, sapien
-                  libero hendrerit est, sed commodo augue nisi non neque. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor,
-                  lorem et placerat vestibulum, metus nisi posuere nisl, in
-                </p>
-                <p id="second-product-description" class="text-skeleton">
-                  AApeget velit. Donec ac tempus ante. Fusce ultricies massa
-                  massa. Fusce aliquam, purus eget sagittis vulputate, sapien
-                  libero hendrerit est, sed commodo augue nisi non neque. Lorem
-                  ipsum dolor sit amet, consectetur adipiscing elit. Sed tempor,
-                  lorem et placerat vestibulum, metus nisi posuere nisl, in
-                </p>
+                <p id="product-description" class="text-skeleton"></p>
+                <p id="second-product-description" class="text-skeleton"></p>
               </div>
 
               <div class="product_variant quantity">
@@ -284,7 +269,7 @@
                       pour offrir une expérience olfactive unique qui vous
                       accompagnera tout au long de la journée 🌸.
                     </p>
-                    <br>
+                    <br />
                     <p>
                       Nous nous engageons à vous offrir une satisfaction totale
                       à chaque achat, car votre bien-être et votre confiance
@@ -296,7 +281,7 @@
                       détails qui font de chaque parfum une véritable œuvre
                       d'art olfactive.
                     </p>
-                    <br>
+                    <br />
                     <p>
                       Plongez dans le monde fascinant des senteurs avec
                       <span
