add banner, change company name on product details description

--- a/contact-us.html
+++ b/contact-us.html
@@ -182,7 +182,7 @@
             <div class="about_thumb">
               <img
                 style="width: 100%; border-radius: 25px"
-                src="assets/img/logo/logo-islam-beauty-store.jpg"
+                src="assets/img/banner/official-islam-banner.png"
                 alt=""
               />
             </div>
