--- a/product-details.html
+++ b/product-details.html
@@ -288,7 +288,7 @@
                         class="brand-lil-bling-title"
                         style="font-weight: 600"
                       >
-                        ✨LiL Scents
+                        ✨Islam-Beauty-Store
                         <i class="lil-bling-copyright-logo">©</i> ✨
                       </span>
                       ! Nous vous proposons une sélection de parfums d'une
