enhance landing page: change BGs styles & some texts

--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
     <!--slider area start-->
     <div class="slider_area home_slider_two owl-carousel">
-      <div class="single_slider" data-bgimg="assets/img/slider/slider4.jpg">
+      <div class="single_slider" data-bgimg="assets/video/parfum-kdo.gif">
         <div class="container">
           <div class="row align-items-center">
             <div class="col-12">
@@ -186,7 +186,10 @@
                   Nouvel arrivage
                   <br />
                   <br />
-                  saison du printemps🌻
+                  saison
+                  <br />
+                  <br />
+                  d'automne 🍃
                 </h1>
                 <p class="slider_price">à partir de<span>80 dhs !</span></p>
                 <a class="button" href="shop.html">Acheter maitenant</a>
@@ -195,7 +198,10 @@
           </div>
         </div>
       </div>
-      <div class="single_slider" data-bgimg="assets/img/slider/slider3.jpg">
+      <div
+        class="single_slider"
+        data-bgimg="assets/video/parfum-ingredients.gif"
+      >
         <div class="container">
           <div class="row align-items-center">
             <div class="col-12">
@@ -348,21 +354,26 @@
     <!--product section area end-->
 
     <!--banner fullwidth start-->
-    <section class="banner_fullwidth">
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-12">
-            <a href="shop.html">
-              <div class="banner_text">
-                <p>Tentez de gagner un cadeau dans votre commande 🎁</p>
-                <h2>🌻 Nouvelle collection tendance 💎</h2>
-                <span>
-                  Profitez des derniéres nouveautés
-                  <br />
-                  élégance et à la mode !
-                </span>
-              </div>
-            </a>
+    <section class="banner_fullwidth mt-5">
+      <div class="align-items-center">
+        <div class="col-12">
+          <a href="shop.html">
+            <div class="banner_text">
+              <p>Tentez de gagner un cadeau* dans votre commande 🎁</p>
+              <h2>
+                💝
+                <u>Nouvelle collection tendance</u>
+                💎
+              </h2>
+            </div>
+          </a>
+          <div class="video-background">
+            <video autoplay loop muted>
+              <source
+                src="assets/video/bg-video-welcome.mp4"
+                type="video/mp4"
+              />
+            </video>
           </div>
         </div>
       </div>
