add FontAwesome Icons, dynamic contacts in footer, store name

--- a/services.html
+++ b/services.html
@@ -17,6 +17,15 @@
     <!-- CSS 
     ========================= -->
 
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+
     <!-- Plugins CSS -->
     <link rel="stylesheet" href="assets/css/plugins.css" />
 
@@ -398,38 +407,28 @@
             <div class="col-lg-4 col-md-6 col-sm-8">
               <div class="widgets_container contact_us">
                 <h3>
-                  À propos de
                   <span class="brand-lil-bling-title">
-                    ✨ LiL Bling <i class="lil-bling-copyright-logo">©</i> ✨
+                    ✨ Islam Beauty Store
+                    <i class="lil-bling-copyright-logo">©</i>
                   </span>
                 </h3>
                 <div class="footer_contact">
+                  <p>Nous livrons à tout le Maroc 💖</p>
                   <p>
-                    <i class="fa fa-map-marker" aria-hidden="true"></i>
-                    Nous livrons à tout le Maroc 💖
+                    <i class="fa-brands fa-whatsapp"></i>
+                    <a href="" id="whatsapp-footer" class="link-to-social"></a>
                   </p>
                   <p>
-                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
-                    GSM:
-                    <u>
-                      <!-- todo: update our phone number (whatsapp) -->
-                      <a href="tel:0123456789"> 0123456789</a>
-                    </u>
+                    <i class="fa-brands fa-instagram"></i>
+                    <a href="" id="instagram-footer" class="link-to-social"></a>
                   </p>
                   <p>
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    <!-- todo: update mail -->
-                    Email: demo@example.com
+                    <i class="fa-brands fa-facebook"></i>
+                    <a href="" id="facebook-footer" class="link-to-social"></a>
                   </p>
                   <p>
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    <!-- todo: update instagram -->
-                    Instagram: @instagram
-                  </p>
-                  <p>
-                    <i class="fa fa-envelope-o" aria-hidden="true"></i>
-                    <!-- todo: update tikTok -->
-                    Tik Tok: @tikTok
+                    <i class="fa-brands fa-tiktok"></i>
+                    <a href="" id="tikTok-footer" class="link-to-social"></a>
                   </p>
                 </div>
               </div>
@@ -485,9 +484,10 @@
     <!--footer area end-->
 
     <!-- JS
-============================================ -->
+  ============================================ -->
 
     <!-- Plugins JS -->
+    <!--jquery min js-->
     <script src="assets/js/vendor/jquery-3.4.1.min.js"></script>
     <script src="assets/js/popper.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
@@ -499,6 +499,12 @@
     <script src="assets/js/imagesloaded.js"></script>
     <script src="assets/js/jquery.cookie.js"></script>
     <script src="assets/js/bpopup.js"></script>
+    <script
+      src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
+      integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    ></script>
 
     <!-- Main JS -->
     <script type="module" src="assets/js/main.js"></script>
