update services texts

--- a/services.html
+++ b/services.html
@@ -196,13 +196,13 @@
                 <h3>🎁Programme de Fidélité Avantageux</h3>
                 <p>
                   Récompensez votre fidélité en participant à notre programme de
-                  fidélité. Gagnez des points à chaque achat et bénéficiez
-                  d'avantages exclusifs tels que des remises spéciales, des
-                  offres promotionnelles réservées aux membres et des cadeaux
-                  surprises. Plus vous achetez, plus vous économisez et plus
-                  vous êtes récompensé ! Passez votre 1ére commande et rejoignez
-                  notre programme de fidélité dès aujourd'hui et commencez à
-                  profiter des avantages !!
+                  fidélité. <b>Gagnez des points</b> à chaque achat et
+                  bénéficiez d'avantages exclusifs tels que des remises
+                  spéciales, des offres promotionnelles réservées aux membres et
+                  des cadeaux surprises. Plus vous achetez, plus vous économisez
+                  et plus vous êtes récompensé ! Passez votre 1ére commande et
+                  rejoignez notre programme de fidélité dès aujourd'hui et
+                  commencez à profiter des <b>avantages</b> !!
                 </p>
               </div>
             </div>
@@ -215,13 +215,15 @@
               <div class="services_content">
                 <h3>💖Garantie de Satisfaction Client</h3>
                 <p>
-                  Nous sommes fiers de la qualité de nos produits et de notre
-                  service clientèle. Nous offrons une garantie de satisfaction
-                  client à 100%. Si, pour une raison quelconque, vous n'êtes pas
-                  entièrement satisfait de votre achat, contactez-nous et nous
-                  ferons tout notre possible pour résoudre votre demande
-                  rapidement et efficacement, que ce soit par un remboursement
-                  intégral ou un remplacement du produit !
+                  Nous sommes fiers de <b>la qualité de nos produits</b> et de
+                  notre service clientèle. Nous offrons une garantie de
+                  satisfaction client à 100%. Si, pour une raison quelconque,
+                  vous n'êtes pas entièrement satisfait de votre achat,
+                  contactez-nous et nous ferons tout notre possible pour
+                  résoudre votre demande
+                  <b>rapidement et efficacement</b> surtout. Ainsi vous resterez
+                  satisfait comme il se doit ! votre satisfaction est notre
+                  devise.
                 </p>
               </div>
             </div>
@@ -239,11 +241,11 @@
                 <h3>⚡Livraison Express</h3>
                 <p>
                   Nous comprenons l'importance de recevoir ses produits
-                  rapidement. Avec notre service de livraison express, vos
-                  commandes seront traitées en priorité et livrées à votre porte
-                  dans les plus brefs délais. Profitez de la commodité et de la
-                  tranquillité d'esprit en sachant que vos achats arriveront
-                  rapidement et en toute sécurité.
+                  <b>rapidement</b>. Avec notre service de livraison express,
+                  vos commandes seront traitées en priorité et livrées à votre
+                  porte dans les plus brefs délais. Profitez de la commodité et
+                  de la tranquillité d'esprit en sachant que vos achats
+                  arriveront rapidement et en toute sécurité.
                 </p>
               </div>
             </div>
@@ -282,7 +284,8 @@
                 <h3>COMMANDE PERSONNALISÉ</h3>
                 <p>
                   Personnalisez vos achats pour une expérience unique.
-                  Choisissez gravures, couleurs et finitions.
+                  Choisissez produits, packs. Envoyer vers adresse que vous
+                  voulez.
                 </p>
               </div>
             </div>
@@ -295,9 +298,8 @@
               <div class="services_desc">
                 <h3>EMBALLAGE PERSONNALISÉ</h3>
                 <p>
-                  Sublimez vos cadeaux avec notre service d'emballage
-                  personnalisé : style, messages et attention aux détails
-                  assurés.
+                  Personnalisez vos cadeaux avec notre service d'emballage
+                  spécial: style, messages et détails spéciaux assurés.
                 </p>
               </div>
             </div>
@@ -369,7 +371,7 @@
                 <p>
                   Contactez-nous via
                   <u>
-                    <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                    <i class="fa-brands fa-whatsapp"></i>
                     <!-- todo: update our phone number (whatsapp) -->
                     <a href="tel:0123456789">+212 0123456789</a>
                   </u>
