--- a/faq.html
+++ b/faq.html
@@ -199,14 +199,13 @@
               <p>
                 Explorez notre section FAQ pour trouver des réponses rapides aux
                 questions les plus courantes 🤔. Que vous cherchiez des
-                informations sur nos produits 💎, nos services ou notre
-                politique de retour, nous avons rassemblé ici les réponses que
-                vous cherchez. Si vous ne trouvez pas ce que vous cherchez,
-                n'hésitez pas à nous contacter directement ! Notre ponctuel
-                service support clientéle est là pour vous aider à tout moment
-                💪, avec des réponses personnalisées et un service attentionné
-                ✨. Parcourez notre FAQ dès maintenant et trouvez la solution à
-                votre question !
+                informations sur nos produits 💎 ou nos services, nous avons
+                rassemblé ici les réponses que vous cherchez. Si vous ne trouvez
+                pas ce que vous cherchez, n'hésitez pas à nous contacter
+                directement ! Notre ponctuel service support clientéle est là
+                pour vous aider à tout moment 💪, avec des réponses
+                personnalisées et un service attentionné ✨. Parcourez notre FAQ
+                dès maintenant et trouvez la solution à votre question !
               </p>
             </div>
           </div>
@@ -221,43 +220,6 @@
           <div class="row">
             <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
               <div class="card card_dipult">
-                <div class="card-header card_accor" id="headingOne">
-                  <button
-                    class="btn btn-link"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseOne"
-                    aria-expanded="true"
-                    aria-controls="collapseOne"
-                  >
-                    Quelle est la politique de retour ?
-                    <i class="fa fa-plus"></i>
-                    <i class="fa fa-minus"></i>
-                  </button>
-                </div>
-
-                <div
-                  id="collapseOne"
-                  class="collapse show"
-                  aria-labelledby="headingOne"
-                  data-parent="#accordion"
-                >
-                  <div class="card-body">
-                    <p>
-                      Nous comprenons que parfois, les choses ne se passent pas
-                      comme prévu. Si vous n'êtes pas entièrement satisfait de
-                      votre achat, contactez-nous par WhatsApp dans les 30 jours
-                      suivant la réception de votre commande. Nous serons
-                      heureux de vous assister avec les retours et les échanges.
-                      Veuillez noter que les articles doivent être retournés
-                      dans leur état d'origine et que des frais de retour
-                      peuvent s'appliquer. Notre équipe est là pour vous offrir
-                      une assistance personnalisée et s'assurer que vous êtes
-                      entièrement satisfait de votre expérience d'achat.
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="card card_dipult">
                 <div class="card-header card_accor" id="headingThree">
                   <button
                     class="btn btn-link collapsed"
@@ -266,7 +228,7 @@
                     aria-expanded="false"
                     aria-controls="collapseThree"
                   >
-                    Comment puis-je bénéficier du programme de fidélité ?
+                    Comment puis-je bénéficier d'un programme de fidélité ?
                     <i class="fa fa-plus"></i>
                     <i class="fa fa-minus"></i>
                   </button>
@@ -279,45 +241,12 @@
                 >
                   <div class="card-body">
                     <p>
-                      C'est simple ! Lorsque vous effectuez un achat sur notre
-                      site, vous êtes automatiquement inscrit à notre programme
-                      de fidélité. Vous gagnez des points pour chaque achat que
-                      vous effectuez, et ces points donnent des réductions sur
-                      vos futurs achats. C'est notre façon de vous remercier
-                      pour votre fidélité !
-                    </p>
-                  </div>
-                </div>
-              </div>
-              <div class="card card_dipult">
-                <div class="card-header card_accor" id="headingfour">
-                  <button
-                    class="btn btn-link collapsed"
-                    data-bs-toggle="collapse"
-                    data-bs-target="#collapseeight"
-                    aria-expanded="false"
-                    aria-controls="collapseeight"
-                  >
-                    Puis-je personnaliser mes bijoux ?
-                    <i class="fa fa-plus"></i>
-                    <i class="fa fa-minus"></i>
-                  </button>
-                </div>
-                <div
-                  id="collapseeight"
-                  class="collapse"
-                  aria-labelledby="headingfour"
-                  data-parent="#accordion"
-                >
-                  <div class="card-body">
-                    <p>
-                      Absolument ! Nous proposons un service de personnalisation
-                      qui vous permet de créer des bijoux uniques et
-                      significatifs. Contactez-nous par WhatsApp pour discuter
-                      de vos idées de personnalisation, que ce soit des
-                      gravures, des choix de couleur. Notre équipe dévouée
-                      travaillera avec vous pour personnaliser le bijou parfait
-                      qui correspond à votre choix et à vos préférences.
+                      Oui ! et c'est simple, Lorsque vous effectuez un achat sur
+                      notre site, vous êtes automatiquement inscrit à notre
+                      programme de fidélité. Vous gagnez des points pour chaque
+                      achat que vous effectuez, et ces points donnent des
+                      réductions sur vos futurs achats. C'est notre façon de
+                      vous remercier pour votre fidélité !
                     </p>
                   </div>
                 </div>
@@ -354,8 +283,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
               <div class="card card_dipult">
                 <div class="card-header card_accor" id="headingTwo">
                   <button
@@ -381,12 +308,11 @@
                       Notre équipe de service clientèle est disponible pour
                       répondre à toutes vos questions et préoccupations. Vous
                       pouvez nous contacter facilement via WhatsApp en utilisant
-                      le numéro fourni sur notre page
-                      <!-- todo : link to contact-us page -->
-                      <!-- todo : have a valid number to include here and in the footer -->
+                      notre page
                       <u><a href="contact-us.html">contactez-nous</a></u>
+                      <!-- todo : add icon - open new page -->
                       . Nous sommes là pour vous aider 7j/7, 24h/24. Si vous
-                      avez besoin d'une assistance en dehors de ces heures,
+                      avez besoin d'une assistance ou quelconque demande,
                       n'hésitez pas à nous laisser un message et nous vous
                       répondrons dès que possible. Votre satisfaction est notre
                       priorité 💖!
@@ -394,6 +320,8 @@
                   </div>
                 </div>
               </div>
+            </div>
+            <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
               <div class="card card_dipult">
                 <div class="card-header card_accor" id="headingseven">
                   <button
@@ -437,7 +365,7 @@
                     aria-expanded="false"
                     aria-controls="collapsesix"
                   >
-                    Comment puis-je être sûr de la qualité de vos produits ?
+                    Comment puis-je être sûr de la qualité des produits ?
                     <i class="fa fa-plus"></i>
                     <i class="fa fa-minus"></i>
                   </button>
@@ -450,22 +378,7 @@
                 >
                   <div class="card-body">
                     <p>
-                      Nous proposons deux types de matériaux principaux pour nos
-                      produits : le plaqué or et l'acier inoxydable.
-                      <b>Le plaqué or</b>
-                      offre un aspect luxueux, mais il peut s'abîmer s'il est
-                      exposé à l'eau ou à des parfums contenant de l'alcool. En
-                      revanche,
-                      <b>l'acier inoxydable</b>
-                      est d'une excellente qualité et résiste à l'eau et à la
-                      sueur.
-                      <br />
-                      Pour prolonger la durée de vie de vos bijoux en plaqué or:
-                      évitez de les mouiller et de les exposer à des parfums.
-                      <br />
-                      Pour les bijoux en acier inoxydable: ils sont excelent et
-                      peuvent être portés dans toutes les conditions sans
-                      problémes !
+                      <!-- todo : add text here in order to respond the question -->
                     </p>
                   </div>
                 </div>
@@ -494,14 +407,12 @@
                     <p>
                       Pour garantir votre confort, nous offrons le paiement à la
                       livraison pour toutes les commandes. Cela signifie que
-                      vous pouvez payer en espèces au moment de la livraison de
-                      votre commande. Notre livreur vous fournira un reçu pour
-                      confirmer le paiement. Vous n'avez pas à vous soucier de
-                      fournir des informations de paiement en ligne, ce qui
-                      garantit la sécurité de votre transaction. Si vous avez
-                      des questions sur le processus de paiement à la livraison,
-                      n'hésitez pas à nous contacter et nous serons ravis de
-                      vous aider 💪!
+                      vous devez payer en espèces au moment de la livraison de
+                      votre commande. Vous n'avez pas à vous soucier de fournir
+                      des informations de paiement en ligne, ce qui garantit la
+                      sécurité de votre transaction. Si vous avez des questions
+                      sur le processus de paiement à la livraison, n'hésitez pas
+                      à nous contacter et nous serons ravis de vous aider 💪!
                     </p>
                   </div>
                 </div>
