update FAQs fonts style, update icon in contact-us page

--- a/contact-us.html
+++ b/contact-us.html
@@ -232,14 +232,16 @@
               <h3>Suivez-nous sur les réseaux sociaux 😎 !!</h3>
               <ul>
                 <li>
-                  <!-- tikTok logo -->
+                  <!-- todo : add tiktok -->
                   Islam Beauty Store
                 </li>
                 <li>
+                  <!-- todo : add phone number to contact here  -->
                   <i class="fa fa-phone"></i>
                   <a href="#">0700648401</a>
                 </li>
                 <li>
+                  <!-- todo add instagram -->
                   <i class="fa fa-instagram" aria-hidden="true"></i>
                   <a href="">islamBeautyStor</a>
                 </li>
@@ -250,7 +252,7 @@
             <div class="contact_message form">
               <h3 style="text-transform: none">
                 N'hésitez pas à nous contacter
-                <i class="fa fa-whatsapp" aria-hidden="true"></i>
+                <i class="fa-brands fa-whatsapp"></i>
                 <br />
                 <br />
                 On est à votre disposition 💖
