--- a/contact-us.html
+++ b/contact-us.html
@@ -382,6 +382,7 @@
     <script src="assets/js/imagesloaded.js"></script>
     <script src="assets/js/jquery.cookie.js"></script>
     <script src="assets/js/bpopup.js"></script>
+    <!-- todo: download remote libraries css/js -->
     <script
       src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/js/all.min.js"
       integrity="sha512-6sSYJqDreZRZGkJ3b+YfdhB3MzmuP9R7X1QZ6g5aIXhRvR1Y/N/P47jmnkENm7YL3oqsmI6AK+V6AD99uWDnIw=="
